--- a/WebProekt/src/main/resources/templates/fragments/header.html
+++ b/WebProekt/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,7 @@
 <header xmlns:th="http://www.thymeleaf.org">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="/">WEB PROGRAMMING SHOP</a>
+            <a class="navbar-brand" href="/">ONLINE BOUTIQUE</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
                     aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
