Adding inMemory Authentication

--- a/WebProekt/src/main/resources/templates/register.html
+++ b/WebProekt/src/main/resources/templates/register.html
@@ -31,11 +31,11 @@
         <p>
         <div class="form-check form-check-inline">
             <input class="form-check-input" name="role" type="radio" id="ROLE_ADMIN" value="ROLE_ADMIN">
-            <label class="form-check-label" for="ROLE_ADMIN">ROLE_ADMIN</label>
+            <label class="form-check-label" for="ROLE_ADMIN">ADMIN</label>
         </div>
         <div class="form-check form-check-inline">
             <input class="form-check-input" name="role"  type="radio" id="ROLE_USER" value="ROLE_USER">
-            <label class="form-check-label" for="ROLE_USER">ROLE_USER</label>
+            <label class="form-check-label" for="ROLE_USER">USER</label>
         </div>
         </p>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
