--- a/WebProekt/src/main/resources/templates/fragments/footer.html
+++ b/WebProekt/src/main/resources/templates/fragments/footer.html
@@ -2,6 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-lg-4 col-xl-3">
+                <!--TODO: Change the text in the given sections below-->
                 <h5>About</h5>
                 <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                 <p class="mb-0">
