--- a/WebProekt/src/main/resources/templates/fragments/header.html
+++ b/WebProekt/src/main/resources/templates/fragments/header.html
@@ -10,10 +10,10 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
                 <ul class="navbar-nav m-auto">
                     <li class="nav-item m-auto">
-                        <a class="nav-link active" href="/products">Products</a>
+                        <a class="nav-link active" href="/clothes">Clothes</a>
                     </li>
                     <li class="nav-item m-auto" sec:authorize="hasRole('ROLE_ADMIN')">
-                        <a class="nav-link active" href="/servlet/thymeleaf/category">Categories</a>
+                        <a class="nav-link active" href="/categories">Categories</a>
                     </li>
                     <li class="nav-item m-auto" sec:authorize="hasRole('ROLE_ADMIN')">
                         <a class="nav-link active" href="/manufacturers">Manufacturers</a>
